--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,11 @@ description: Systems Immunology at Heidelberg University Hospital
 show_downloads: true
 google_analytics: [Google Analytics tracking ID]
 
-show_downloads: true
-google_analytics: [Your Google Analytics tracking ID]
 google_analytics_anonymize: false
 darkmode: false
-hide_first_title: false # Useful if README.md is used on both github and pages
-logo_url: ./logo.png # Either absolute or relative url
-syntax_theme: ./syntax.css # Leave empty for default, otherwise link to a pygments stylesheet
+hide_first_title: true # Useful if README.md is used on both github and pages
+# logo_url: ./logo.png # Either absolute or relative url
+# syntax_theme: ./syntax.css # Leave empty for default, otherwise link to a pygments stylesheet
 colors:
     gradient_left: "#155799"
     gradient_right: "#159957"
@@ -23,10 +21,10 @@ colors:
     link: "#1e6bb8" # this default to gradient_color
     section_title: "#155799" # this default to gradient_color
 buttons:
-      zip_url: http://rgb-lab.de/team
-      zip_title: Team
+      zip_url: http://rgb-lab.de/publications
+      zip_title: Publications
       zip_hide: false
-      tar_url: http://example.com/
-      tar_title: Title
-      tar_hide: true
+      tar_url: http://rgb-lab.de/team
+      tar_title: Team
+      tar_hide: false
       github_hide: true # hides "View on Github"
