--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ show_downloads: false
 google_analytics: [Google Analytics tracking ID]
 
 google_analytics_anonymize: false
-darkmode: false
+darkmode: true
 hide_first_title: true # Useful if README.md is used on both github and pages
 # logo_url: ./logo.png # Either absolute or relative url
 # syntax_theme: ./syntax.css # Leave empty for default, otherwise link to a pygments stylesheet
