--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
 title: The Grieshaber-Bouyer Laboratory
 description: Systems Immunology at Heidelberg University Hospital
 
-show_downloads: false
+show_downloads: true
 google_analytics: [Google Analytics tracking ID]
 
 google_analytics_anonymize: false
@@ -14,17 +14,17 @@ hide_first_title: true # Useful if README.md is used on both github and pages
 # logo_url: ./logo.png # Either absolute or relative url
 # syntax_theme: ./syntax.css # Leave empty for default, otherwise link to a pygments stylesheet
 colors:
-    gradient_left: "#155799"
-    gradient_right: "#159957"
+    gradient_left: "#104172"
+    gradient_right: "#710083"
     header: "#fff"
     android_theme: "#000" # this default to gradient_color
     link: "#1e6bb8" # this default to gradient_color
     section_title: "#155799" # this default to gradient_color
-# buttons:
-#      zip_url: http://rgb-lab.de/publications
-#      zip_title: Publications
-#      zip_hide: false
-#      tar_url: http://rgb-lab.de/team
-#      tar_title: Team
-#      tar_hide: false
-#      github_hide: true # hides "View on Github"
+ buttons:
+      zip_url: http://rgb-lab.de/publications
+      zip_title: Publications
+      zip_hide: false
+      tar_url: http://rgb-lab.de/team
+      tar_title: Team
+      tar_hide: false
+      github_hide: true # hides "View on Github"
